objects/Veda_Score__c.object
<CustomObject>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda Score</relationshipLabel>
        <relationshipName>Veda_Score</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>risk_Odds__c</fullName>
        <label>risk Odds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score_Data_Level_Code__c</fullName>
        <label>score Data Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score_Data_Level__c</fullName>
        <label>score Data Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score_Id__c</fullName>
        <label>score Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score_Master_scale__c</fullName>
        <label>score Master scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score_Name__c</fullName>
        <label>score Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score_Type__c</fullName>
        <label>score Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score_Version__c</fullName>
        <label>score Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Score</label>
    <nameField>
        <label>Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Score</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>